--- a/experience.html
+++ b/experience.html
@@ -4,6 +4,14 @@
 
 	<tr>
 		<td>
+			<b>Research Intern </b> <br>
+			Microsoft<br>
+		</td>
+		<td>Redmond, WA, USA</td>
+		<td>(3 months) <br> Jul. 2018 - Sep. 2018</td>
+	</tr>
+	<tr>
+		<td>
 			<b>Graduate Technical Intern </b> <br>
 			Xilinx<br>
 			<font size="1">
