--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<div class="row">
 					
 					<div class="col-md-3 col-md-push-9">
-						<img class="img-responsive img-rounded" src="./img/kaan.jpeg" alt="" width="240">
+						<img class="img-responsive img-rounded" src="./img/kaan_profile.jpg" alt="" width="240">
 						<h1 class="text-center"><font color="white">Kaan Kara</font></h1>
 						<p>
 							<font color="white">
