--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,12 @@
 <h1>Publications</h1>
 <hr>
 <p>
+	<b>[VLDB'19]</b> <a href="http://ieeexplore.ieee.org/abstract/document/7966672/" target="_blank">ColumnML: Column Store Machine Learning with On-the-Fly Data Transformation</a> <br>
+	<b>Kaan Kara</b>, Ken Eguro, Ce Zhang, Gustavo Alonso <br>
+	Proceedings of the VLDB Endowment, Volume 12, No. 4, December 2018
+</p>
+<hr>
+<p>
 	<b>[FCCM'17]</b> <a href="http://ieeexplore.ieee.org/abstract/document/7966672/" target="_blank">FPGA-accelerated Dense Linear Machine Learning: A Precision-Convergence Trade-off</a> <br>
 	<b>Kaan Kara</b>, Dan Alistarh, Gustavo Alonso, Onur Mutlu, Ce Zhang <br>
 	IEEE 25th Annual International Symposium on Field-Programmable Custom Computing Machines, May 2017
@@ -40,7 +46,7 @@
 <hr>
 <p>
 	<b>55th Design Automation Conference, 2018</b> <br>
-	<a href="https://www.dac.com/content/2018-system-design-contest" target="_blank">System Design Contest for Low-Power Object Detection</a> <br>
+	<a href="http://www.cse.cuhk.edu.hk/~byu/2018-DAC-SDC/index.html" target="_blank">System Design Contest for Low-Power Object Detection</a> <br>
 	Ranked 2nd overall with highest frame processing rate using an FPGA-based convolutional neural network solution. More than 100 international teams competed in two categories (GPU and FPGA). <br>
 </p>
 <hr>
