--- a/publications.html
+++ b/publications.html
@@ -1,7 +1,7 @@
 <h1>Publications</h1>
 <hr>
 <p>
-	<b>[VLDB'19]</b> <a href="http://ieeexplore.ieee.org/abstract/document/7966672/" target="_blank">ColumnML: Column Store Machine Learning with On-the-Fly Data Transformation</a> <br>
+	<b>[VLDB'19]</b> ColumnML: Column Store Machine Learning with On-the-Fly Data Transformation<br>
 	<b>Kaan Kara</b>, Ken Eguro, Ce Zhang, Gustavo Alonso <br>
 	Proceedings of the VLDB Endowment, Volume 12, No. 4, December 2018
 </p>
