--- a/publications.html
+++ b/publications.html
@@ -1,9 +1,16 @@
 <h1>Publications</h1>
 <hr>
 <p>
-	<b>[VLDB'19]</b> ColumnML: Column Store Machine Learning with On-the-Fly Data Transformation<br>
+	<b>[VLDB'19]</b> <a href="http://www.vldb.org/pvldb/vol12/p348-kara.pdf" target="_blank"> ColumnML: Column Store Machine Learning with On-the-Fly Data Transformation</a> <br>
 	<b>Kaan Kara</b>, Ken Eguro, Ce Zhang, Gustavo Alonso <br>
 	Proceedings of the VLDB Endowment, Volume 12, No. 4, December 2018
+</p>
+<hr>
+<p>
+	<b>[AISTATS'18]</b> <a href="http://proceedings.mlr.press/v84/guo18a/guo18a.pdf" target="_blank"> Layerwise Systematic Scan:
+Deep Boltzmann Machines and Beyond</a> <br>
+	Heng Guo, <b>Kaan Kara</b>, Ce Zhang <br>
+	21st International Conference on Artificial Intelligence and Statistics, April 2018
 </p>
 <hr>
 <p>
