--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Kaan Kara</title>
+	<title>Home | Kaan Kara</title>
 
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
