--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="author" content="Kaan Kara">
+	<meta name="robots" content="noodp,noydir" />
 
-	<title>Home | Kaan Kara</title>
+	<title>Kaan Kara - Research/Projects</title>
 
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
