--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 							<h1>Teaching</h1>
 							<p>Teaching assistant for:</p>
 							<ul>
+								<li><a href="https://www.systems.ethz.ch/courses/spring2019/data_mod_db" target="_blank">Data Modelling and Databases, Spring 2019</a>
 								<li><a href="https://www.systems.ethz.ch/courses/fall2018/asl/" target="_blank">Advanced Systems Lab, Fall 2018</a>
 								<li><a href="https://www.systems.ethz.ch/courses/spring2018/data_mod_db" target="_blank">Data Modelling and Databases, Spring 2018</a>
 								<li><a href="https://www.systems.ethz.ch/courses/fall2017/asl/" target="_blank">Advanced Systems Lab, Fall 2017</a>
