--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,19 @@
 <h1>Publications</h1>
 <hr>
 <p>
+	<b>[VLDB'19 Demo]</b> doppioDB 2.0: Hardware Techniques for Improved Integration of Machine Learning into Databases<br>
+	<b>Kaan Kara</b>, Zeke Wang, Ce Zhang, Gustavo Alonso <br>
+	Proceedings of the VLDB Endowment, Volume 12, August 2019
+</p>
+<hr>
+<p>
+	<b>[VLDB'19]</b> <a href="https://dl.acm.org/citation.cfm?id=3329482" target="_blank">Accelerating Generalized Linear Models with MLWeaving: A One-Size-Fits-All System for
+Any-precision Learning</a> <br>
+	Zeke Wang, <b>Kaan Kara</b>, Hantian Zhang, Gustavo Alonso, Onur Mutlu, Ce Zhang <br>
+	Proceedings of the VLDB Endowment, Volume 12, No. 7, March 2019
+</p>
+<hr>
+<p>
 	<b>[VLDB'19]</b> <a href="http://www.vldb.org/pvldb/vol12/p348-kara.pdf" target="_blank"> ColumnML: Column Store Machine Learning with On-the-Fly Data Transformation</a> <br>
 	<b>Kaan Kara</b>, Ken Eguro, Ce Zhang, Gustavo Alonso <br>
 	Proceedings of the VLDB Endowment, Volume 12, No. 4, December 2018
@@ -52,9 +65,11 @@ Deep Boltzmann Machines and Beyond</a> <br>
 <h1>Awards</h1>
 <hr>
 <p>
-	<b>55th Design Automation Conference, 2018</b> <br>
-	<a href="http://www.cse.cuhk.edu.hk/~byu/2018-DAC-SDC/index.html" target="_blank">System Design Contest for Low-Power Object Detection</a> <br>
-	Ranked 2nd overall with highest frame processing rate using an FPGA-based convolutional neural network solution. More than 100 international teams competed in two categories (GPU and FPGA). <br>
+	<b>55th and 56th Design Automation Conference, 2018-2019</b> <br>
+	<a href="http://www.cse.cuhk.edu.hk/~byu/2019-DAC-SDC/index.html" target="_blank">System Design Contest for Low-Power Object Detection</a> <br>
+	Back-to-back top-3 ranking: In 2018 ranked 2nd and in 2019 ranked 3rd. Both times, we delivered the
+	highest frame processing rate and lowest energy consumption using an FPGA-based convolutional neural network solution.
+	More than 100 international teams competed in two categories (GPU and FPGA). <br>
 </p>
 <hr>
 <p>
